--- a/app/src/main/res/layout/activity_information_word.xml
+++ b/app/src/main/res/layout/activity_information_word.xml
@@ -27,13 +27,15 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
+
     </com.google.android.material.tabs.TabLayout>
 
     <!--고정-->
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="101dp"
-        android:layout_height="26dp"
+        android:layout_width="80dp"
+        android:layout_height="20dp"
         android:layout_marginStart="12dp"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="20dp"
@@ -47,8 +49,8 @@
 
     <ImageButton
         android:id="@+id/loginicon"
-        android:layout_width="37dp"
-        android:layout_height="37dp"
+        android:layout_width="27dp"
+        android:layout_height="27dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
@@ -117,22 +119,23 @@
         android:id="@+id/view1"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="56dp"
         android:background="#B7B7B7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 
     <View
         android:id="@+id/view2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="657dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginTop="664dp"
         android:background="#B7B7B7"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -158,11 +161,11 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="114dp"
-        android:layout_height="72dp"
+        android:layout_width="103dp"
+        android:layout_height="59dp"
         android:layout_marginStart="18dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/button_color"
         android:text="십계명"
         android:textColor="#FFFFFF"
@@ -173,13 +176,13 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="114dp"
-        android:layout_height="72dp"
+        android:layout_width="103dp"
+        android:layout_height="59dp"
         android:layout_marginStart="18dp"
-        android:layout_marginLeft="18dp"
+        android:layout_marginLeft="30dp"
         android:layout_marginEnd="19dp"
-        android:layout_marginRight="19dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/button_color"
         android:text="계약 팁"
         android:textColor="#FFFFFF"
@@ -190,11 +193,11 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="114dp"
-        android:layout_height="72dp"
+        android:layout_width="103dp"
+        android:layout_height="59dp"
         android:layout_marginEnd="18dp"
-        android:layout_marginRight="18dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/button_color"
         android:text="단어"
         android:textColor="#FFFFFF"
@@ -221,10 +224,11 @@
         android:layout_width="225dp"
         android:layout_height="156dp"
         android:layout_marginTop="204dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginRight="28dp"
+        android:layout_marginEnd="148dp"
+        android:layout_marginRight="148dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
     </androidx.viewpager.widget.ViewPager>
 
 
